Nav overflow fix on mobile pt 3

--- a/blocks/src/blocks/nav-container/style.scss
+++ b/blocks/src/blocks/nav-container/style.scss
@@ -104,11 +104,11 @@
         z-index: 9998;
         background-color: var(--wp--preset--color--base);
         height: 100vh;
-        overflow: hidden;
+        // overflow: hidden;
 
         .flyout-content {
             height: calc(100vh - (var(--wp--preset--spacing--60) * 2));
-            overflow-y: auto;
+            // overflow-y: auto;
             box-sizing: border-box;
         }
     }
